--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,9 +12,8 @@ log4j.appender.logfile.layout.ConversionPattern=%d{yy-MM-dd HH:mm} %5p %c{1}:%L 
 
 log4j.rootLogger=info, stdout, logfile
 
-log4j.logger.com.suteam=debug
-log4j.logger.net.sf.ehcache=error
-log4j.logger.org.hibernate=error
-log4j.logger.org.hibernate.SQL=debug
+log4j.logger.com.mosso=debug
+log4j.logger.org.springframework.batch=DEBUG
+log4j.logger.org.springframework.data.mongodb=DEBUG
+log4j.logger.org.springframework.transaction=INFO
 log4j.logger.org.springframework=error
-log4j.logger.org.springframework.orm.hibernate3=debug
