--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,1 @@
-#Thu May 26 14:58:13 CST 2011
-system.type=0
-registPath=http\://210.75.215.17\:8080/employee/save.do
-system.initPermission=0
+workspaceDir=D:/github/deimos
