--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,6 +14,6 @@ log4j.rootLogger=info, stdout, logfile
 
 log4j.logger.com.mosso=debug
 log4j.logger.org.springframework.batch=DEBUG
-log4j.logger.org.springframework.data.mongodb=DEBUG
+log4j.logger.org.springframework.data.mongodb=INFO
 log4j.logger.org.springframework.transaction=INFO
 log4j.logger.org.springframework=error
