--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,11 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>opensymphony</groupId>
+		    <artifactId>sitemesh</artifactId>
+		    <version>2.4.2</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
